AutoRepair scheduler InJvm dtest